--- a/src/components/Left/left.css
+++ b/src/components/Left/left.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 650px;
+    height: 600px;
 }
 .container{
     display: flex;
@@ -95,10 +95,13 @@
     font-size: 16px;
     border: 0;
     outline: none;
+    color: black;
     background: linear-gradient(white, #00B0FF);
     /* box-shadow: 5px 5px 10px #fff; */
 }
-
+.form input::-webkit-input-placeholder{
+    color: black;
+}
 .form input:hover{
     background: linear-gradient(white, #00B0FF);
     box-shadow: none;
@@ -108,7 +111,7 @@
     width: 50%;
     padding:10px;
     margin: 15px 0;
-    color: grey;
+    color: black;
     font-size: 16px;
     border: 0;
     outline: none;
