--- a/src/Pages/Add/Add.css
+++ b/src/Pages/Add/Add.css
@@ -1,6 +1,6 @@
 .main{
     width: 100%;
-    height: 100vh;
+    min-height: 80vh;
     margin: 20px 0;
     display: flex;
     align-items: flex-start;
